--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
     </aside>
 
     <main class="main-content">
-        <header>
+        <!-- <header>
             <h1>Welcome to my page <span class="wave-emoji">👋</span></h1>
             <p>Your academic hub for notes and projects</p>
-        </header>
+        </header> -->
 
         <div class="card-grid">
             
@@ -374,3 +374,4 @@
    
 </body>  
 </html>
+
