--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div class="card other-notes" onclick="navigateTo('other-notes')">
                 <div class="arrow-icon">➔</div>
                 <div class="icon-box">📂</div>
-                <h3>Other Notes</h3>
+                <h3>Other</h3>
                 <p>Misc. Resources</p>
             </div>
 
@@ -374,4 +374,5 @@
    
 </body>  
 </html>
+
 
