--- a/index.html
+++ b/index.html
@@ -278,10 +278,6 @@
     </aside>
 
     <main class="main-content">
-        <!-- <header>
-            <h1>Welcome to my page <span class="wave-emoji">👋</span></h1>
-            <p>Your academic hub for notes and projects</p>
-        </header> -->
 
         <div class="card-grid">
             
@@ -301,7 +297,7 @@
             <div class="card projects" onclick="navigateTo('projects')">
                 <div class="arrow-icon">➔</div>
                 <div class="icon-box">🚀</div>
-                <h3>Projects</h3>
+                <h3>Question Pepars</h3>
                 <p>Research & Code</p>
             </div>
 
@@ -374,5 +370,3 @@
    
 </body>  
 </html>
-
-
