Update subject notes and header in HTML file
Updated the content of the HTML file to reflect new subject notes and modified the header text.

--- a/mainFiles/otherNotes.html
+++ b/mainFiles/otherNotes.html
@@ -117,8 +117,8 @@
 
     <div class="container">
         <header>
-            <h1>Subject Notes</h1>
-            <p>Click a subject to open the PDF</p>
+            <h1>Your Activity</h1>
+            <p>Click to open the PDF</p>
         </header>
 
         <div class="card-grid">
@@ -204,3 +204,4 @@
     </script>
 </body>
 </html>
+
