--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             const pages = {
                 'notes': 'mainFiles/notes.html',
                 'assignments': 'mainFiles/lab.html',
-                'projects': 'mainFiles/projects.html',
+                'projects': 'mainFiles/questionPepar.html',
                 'aptitude': 'mainFiles/aptitude.html',
                 'announcements': 'mainFiles/announcement.html',
                 'other-notes': 'mainFiles/otherNotes.html'
@@ -370,3 +370,4 @@
    
 </body>  
 </html>
+
