--- a/mainFiles/otherNotes.html
+++ b/mainFiles/otherNotes.html
@@ -5,110 +5,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subject Notes</title>
     <style>
-        :root {
-            --primary-color: #4a90e2;
-            --bg-color: #f4f7f6;
-            --card-bg: #ffffff;
-            --text-color: #333;
-            --secondary-text: #666;
-            --hover-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        /* --- RESET & BASE STYLES --- */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: var(--bg-color);
-            margin: 0;
-            padding: 20px;
+            background: linear-gradient(-45deg, #ee7752, #a95776, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+            min-height: 100vh;
+            color: white;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            padding: 40px 20px;
         }
 
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* --- CONTAINER --- */
         .container {
             width: 100%;
-            max-width: 600px;
+            max-width: 800px; /* Slightly wider to accommodate grid */
         }
 
         header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+            animation: fadeInDown 1s ease-out;
         }
 
         header h1 {
-            color: var(--text-color);
-            margin: 0;
-            font-size: 1.8rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            margin-bottom: 5px;
         }
+
         header p {
-            color: var(--secondary-text);
-            margin-top: 5px;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
+            opacity: 0.9;
+            letter-spacing: 0.5px;
         }
 
+        /* --- CARD GRID --- */
         .card-grid {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
         }
 
+        /* --- GLASSMORPHISM CARD --- */
         .card {
-            background: var(--card-bg);
-            border-radius: 12px;
-            padding: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+            padding: 20px 25px;
             display: flex;
             align-items: center;
             position: relative;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            border: 1px solid transparent;
-            text-decoration: none; /* In case we use anchor tags later */
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
+            animation: fadeInUp 0.8s ease-out backwards;
+            text-decoration: none;
         }
+
+        /* Staggered animation for cards */
+        .card:nth-child(1) { animation-delay: 0.1s; }
+        .card:nth-child(2) { animation-delay: 0.2s; }
+        .card:nth-child(3) { animation-delay: 0.3s; }
+        .card:nth-child(4) { animation-delay: 0.4s; }
+        .card:nth-child(5) { animation-delay: 0.5s; }
+        .card:nth-child(6) { animation-delay: 0.6s; }
 
         .card:hover {
-            transform: translateY(-2px);
-            box-shadow: var(--hover-shadow);
-            border-color: var(--primary-color);
+            transform: translateY(-5px) scale(1.02);
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+            border-color: rgba(255, 255, 255, 0.4);
         }
 
-        .card:active {
-            transform: scale(0.98);
-        }
-
+        /* --- ICON BOX --- */
         .icon-box {
-            font-size: 2rem;
+            font-size: 1.8rem;
             margin-right: 20px;
-            background: #eef4ff;
-            width: 50px;
-            height: 50px;
+            background: rgba(255, 255, 255, 0.2);
+            width: 55px;
+            height: 55px;
             display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            flex-shrink: 0; /* Prevents icon from squishing */
         }
 
         .card-content h3 {
             margin: 0;
             font-size: 1.2rem;
-            color: var(--text-color);
+            font-weight: 600;
+            color: white;
         }
 
         .card-content p {
             margin: 4px 0 0 0;
             font-size: 0.85rem;
-            color: var(--secondary-text);
+            color: rgba(255, 255, 255, 0.8);
         }
 
+        /* --- ARROW ICON --- */
         .arrow-icon {
             position: absolute;
             right: 20px;
-            color: #ccc;
+            color: rgba(255, 255, 255, 0.6);
             font-size: 1.2rem;
-            transition: 0.3s;
+            transition: all 0.3s;
         }
 
         .card:hover .arrow-icon {
-            color: var(--primary-color);
+            color: white;
             transform: translateX(5px);
+        }
+
+        /* --- ANIMATIONS --- */
+        @keyframes fadeInDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
     </style>
@@ -117,65 +155,65 @@
 
     <div class="container">
         <header>
-            <h1>Your Activity</h1>
-            <p>Click to open the PDF</p>
+            <h1>Subject Notes</h1>
+            <p>Select a subject to view documentation</p>
         </header>
 
         <div class="card-grid">
             
             <div class="card" onclick="openPdf('cpp')">
-                <div class="arrow-icon">➔</div>
                 <div class="icon-box">💻</div>
                 <div class="card-content">
                     <h3>C++ Presentation</h3>
                     <p>Static keywords</p>
                 </div>
+                <div class="arrow-icon">➔</div>
             </div>
 
             <div class="card" onclick="openPdf('c')">
-                <div class="arrow-icon">➔</div>
                 <div class="icon-box">⚙️</div>
                 <div class="card-content">
-                    <h3>C++ Mini Project Synopsis</h3>
-                    <p>Explaination</p>
+                    <h3>Mini Project</h3>
+                    <p>Synopsis & Logic</p>
                 </div>
+                <div class="arrow-icon">➔</div>
             </div>
 
-            <div class="card" onclick="openPdf('sql')">
-                <div class="arrow-icon">➔</div>
+            <!-- <div class="card" onclick="openPdf('sql')">
                 <div class="icon-box">🗄️</div>
                 <div class="card-content">
                     <h3>SQL & Database</h3>
                     <p>Queries & Theory</p>
                 </div>
+                <div class="arrow-icon">➔</div>
             </div>
 
             <div class="card" onclick="openPdf('java')">
-                <div class="arrow-icon">➔</div>
                 <div class="icon-box">☕</div>
                 <div class="card-content">
                     <h3>Java</h3>
                     <p>Core Java Notes</p>
                 </div>
+                <div class="arrow-icon">➔</div>
             </div>
 
             <div class="card" onclick="openPdf('python')">
-                <div class="arrow-icon">➔</div>
                 <div class="icon-box">🐍</div>
                 <div class="card-content">
                     <h3>Python</h3>
                     <p>Scripting & Logic</p>
                 </div>
+                <div class="arrow-icon">➔</div>
             </div>
 
             <div class="card" onclick="openPdf('angular')">
-                <div class="arrow-icon">➔</div>
                 <div class="icon-box">🅰️</div>
                 <div class="card-content">
                     <h3>Angular</h3>
                     <p>Framework Guide</p>
                 </div>
-            </div>
+                <div class="arrow-icon">➔</div>
+            </div> -->
 
         </div>
     </div>
@@ -204,4 +242,3 @@
     </script>
 </body>
 </html>
-
