--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
 
     <aside class="glass-panel profile-sidebar">
         <div class="profile-img"></div>
-        <h2 class="student-name">Manoj</h2>
+        <h2 class="student-name">Unknown</h2>
         <div class="student-info">
             <p>MCA - Semester I</p>
-            <p>Roll No: 62</p>
+            <p>Roll No: 0</p>
         </div>
 
         <nav class="sidebar-menu">
@@ -370,4 +370,5 @@
    
 </body>  
 </html>
+
 
