--- a/mainFiles/questionPepar.html
+++ b/mainFiles/questionPepar.html
@@ -238,7 +238,7 @@
         <div class="card-grid">
 
             <div class="card" onclick="downloadFile('questionss/M.C.A ( 2020 PATTERN )april2025.pdf')">
-                <div class="icon-box"><i class="fas fa-database"></i></div>
+                 <div class="icon-box"><i class="fas fa-file-pdf"></i></div>
                 <div class="card-content">
                     <h3>MCA APRIL 2025</h3>
                     <p>2020 PATTERN</p>
@@ -248,7 +248,7 @@
             </div>
 
             <div class="card" onclick="downloadFile('questionss/M.C.A ( 2024 _PATTERN )april2025.pdf')">
-                <div class="icon-box"><i class="fas fa-calculator"></i></div>
+                 <div class="icon-box"><i class="fas fa-file-pdf"></i></div>
                 <div class="card-content">
                     <h3>MCA APRIL 2025</h3>
                     <p>2024 PATTERN</p>
@@ -268,7 +268,7 @@
             </div>
 
             <div class="card" onclick="downloadFile('questionss/mcaEng1.pdf')">
-                <div class="icon-box"><i class="fas fa-file-code"></i></div>
+                 <div class="icon-box"><i class="fas fa-file-pdf"></i></div>
                 <div class="card-content">
                     <h3>MCA (Eng)-1</h3>
                     <p>2019 PATTERN</p>
@@ -315,3 +315,4 @@
     </script>
 </body>
 </html>
+
