--- a/mainFiles/lab.html
+++ b/mainFiles/lab.html
@@ -179,7 +179,7 @@
             <style>.back-btn { transform: rotate(180deg); }</style>
         </div>
         <div class="header-title">
-            <h1>Subject Notes</h1>
+            <h1>Lab Programs</h1>
             <p>PDF Resources</p>
         </div>
     </header>
@@ -196,25 +196,25 @@
                 <div class="arrow-icon">❯</div>
             </div>
 
-            <!-- <div class="card" onclick="openPdf('c')">
-                <div class="icon-box">⚙️</div>
+             <div class="card" onclick="openPdf('py')">
+                <div class="icon-box">💻</div>
                 <div class="card-content">
-                    <h3>C Synopsis</h3>
-                    <p>Basic Concepts</p>
+                    <h3>Python Lab</h3>
+                    <p>Lab Manual & Codes</p>
                 </div>
                 <div class="arrow-icon">❯</div>
             </div>
 
-            <div class="card" onclick="openPdf('sql')">
-                <div class="icon-box">🗄️</div>
+          <div class="card" onclick="openPdf('dsa')">
+                <div class="icon-box">💻</div>
                 <div class="card-content">
-                    <h3>SQL Queries</h3>
-                    <p>Database Management</p>
+                    <h3>DSA Lab</h3>
+                    <p>ab Manual & Codes</p>
                 </div>
                 <div class="arrow-icon">❯</div>
             </div>
 
-            <div class="card" onclick="openPdf('java')">
+            <!--  <div class="card" onclick="openPdf('java')">
                 <div class="icon-box">☕</div>
                 <div class="card-content">
                     <h3>Java Core</h3>
@@ -239,8 +239,8 @@
         // CONFIGURATION: Replace with your actual paths
         const pdfLinks = {
             'cpp':      'lab/cppLab.pdf',
-            'c':        'otherNotes/CppSynopsis.pdf',
-            'sql':      'notes/sql_queries.pdf',
+            'py':        'lab/pythonLab.pdf',
+            'dsa':      'lab/dsaLab.pdf',
             'java':     'notes/java_complete.pdf',
             'python':   'notes/python_handbook.pdf',
             'angular':  'notes/angular_tutorial.pdf'
